package game.model;

public interface ILocalizable {
    void setPosition(int horizontal, int vertical);
}
