package game.model;

public class Tree extends Artifact {

    public Tree() {
    }

    public Tree(int id) {
        super();

    }
}
