@startuml

title __TEXTADVENTUREGAME's Class Diagram__\n

  package game {
    package game.constants {
      class ApplicationConstants {
      }
    }
  }
  

  package game {
    package game.model {
      class Artifact {
      }
    }
  }
  

  package game {
    package game.model {
      package game.model.factory {
        class ArtifactFactory {
        }
      }
    }
  }
  

  package game {
    package game.helper.sql {
      class ArtifactPositionWrapper {
      }
    }
  }
  

  package game {
    package game.helper.sql {
      class ArtifactWrapper {
      }
    }
  }
  

  package game {
    package game.model {
      interface CollectibleItem {
      }
    }
  }
  

  package game {
    package game.helper.sql {
      class ConnectedGameBoardsWrapper {
      }
    }
  }
  

  package game {
    package game.control {
      class Controller {
      }
    }
  }
  

  package game {
    package game.model {
      class Door {
      }
    }
  }
  

  package game {
    package game.model {
      package game.model.gamedata {
        class Game {
        }
      }
    }
  }
  

  package game {
    package game.model {
      package game.model.gamedata {
        class GameBoard {
        }
      }
    }
  }
  

  package game {
    package game.helper.sql {
      class GameBoardWrapper {
      }
    }
  }
  

  package game {
    package game.model {
      package game.model.gamedata {
        class GameStrategy {
        }
      }
    }
  }
  

  package game {
    package game.model {
      interface ILocalizable {
      }
    }
  }
  

  package game {
    package game.model {
      class Key {
      }
    }
  }
  

  package game {
    class Main {
    }
  }
  

  package game {
    package game.model {
      class Player {
      }
    }
  }
  

  package game {
    package game.helper.sql {
      class PlayerWrapper {
      }
    }
  }
  

  package game {
    package game.helper.sql {
      abstract class SqliteWrapper {
      }
    }
  }
  

  package game {
    package game.model {
      class Tree {
      }
    }
  }
  

  ArtifactPositionWrapper -up-|> SqliteWrapper
  ArtifactWrapper -up-|> SqliteWrapper
  ConnectedGameBoardsWrapper -up-|> SqliteWrapper
  Controller o-- Game : game
  Controller o-- Player : player
  Door -up-|> Artifact
  Door o-- Key : doorKey
  GameBoardWrapper -up-|> SqliteWrapper
  Key -up-|> CollectibleItem
  Key -up-|> Artifact
  Main -up-|> Application
  Main o-- Controller : controller
  Player -up-|> ILocalizable
  PlayerWrapper -up-|> SqliteWrapper
  Tree -up-|> Artifact


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
